fix(orm): 修复 ORM 框架中的多个关键问题
- 解决集成测试中跨测试数据残留问题，清空所有测试表并提交事务
- 移除 Velocity 日志配置避免静默丢弃模板告警，改用默认日志实现
- 修复批量持久化时内存泄漏问题，每批后逐个分离实体释放一级缓存
- 修复复合主键实体删除时可能删错数据的高危问题，检测到复合主键时报错
- 修复逻辑删除字段类型错配问题，按实际字段类型写入删除标记值
- 统一 EntityManager 释放逻辑，替换废弃的 releaseAfterTerminalOp 方法
- 修复 QueryUtils 中 code=-1 查询所有枚举值时仍添加查询条件的问题
- 改进 ValueHandlerResultTransformer 异常处理，保留构造器真实异常信息
- 新增批量写入和整型逻辑删除相关测试用例验证修复效果